<resources>
    <string name="app_name">The Intelligent Food Network</string>
    <string name="home_logo_info">The Intelligent Food Network  \n © TIFN Inc 2017</string>
    <string name="my_food_network">My Food Network</string>
    <string name="shopping">Shopping</string>
    <string name="recipes">Recipes</string>
    <string name="account">My Account</string>
    <string name="food_search">Nutrients Search</string>
    <string name="log_out">Logout</string>


    <!--Action Bar Strings-->
    <string name="my_food_network_action_bar_string">My Food Network</string>
    <string name="add_food_item_action_bar_string">Add Item</string>
    <string name="recipes_action_bar_string">Recipes</string>
    <string name="food_search_action_bar_string">Nutritional Values</string>
    <string name="recipes_from_food_contents_action_bar_string">Recipes based on</string>
    <string name="shopping_action_bar_string">Shopping</string>
    <string name="shopping_list">Shopping List</string>
    <string name="account_action_bar_string">My Account</string>
    <string name="edit_profile_action_bar_string">Edit Profile</string>
    <string name="shopping_list_recommendation_string">Shopping Recommendation</string>
    <string name="contact_developers_string">Contact Developers</string>


    <!--Food Contents Spinner -->
    <string-array name="food_contents_spinner_array">
        <item>All Items</item>
        <item>Poultry</item>
        <item>Fruit and Veg</item>
        <item>Dairy</item>
        <item>Misc.</item>
    </string-array>

    <!--Food Click Dialog String Array -->
    <string-array name="food_dialog_string_array">
        <item>View Recipes</item>
        <item>View Nutritional Info</item>
    </string-array>

    <!--Bottom Nav Titles -->
    <string name="bottom_nav_home">Home</string>
    <string name="bottom_nav_my_network">My Food Network</string>
    <string name="bottom_nav_shopping">Shopping</string>
    <string name="bottom_nav_recipes">Recipes</string>
    <string name="bottom_nav_account">Account</string>

    <!-- Recipe Details Strings -->
    <string name="serving">Servings</string>
    <string name="ww_smart_points">Weight Watcher\nSmart Points</string>
    <string name="preparation">Mins\nPreparation</string>
    <string name="cook_time">Mins\nCook Time</string>
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>
    <string name="title_activity_nav_drawer_sample">NavDrawerSample</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!--Login Page -->
    <string name="register_string">Not a Member? Register Here.</string>
    <string name="login_string">Already Registered? Login Here.</string>

    <!-- Hamburger Menu Open & Close Strings -->
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>


</resources>
