<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:enabled="true"
        android:icon="@drawable/ic_home_icon"
        android:title="@string/bottom_nav_home"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_my_network"
        android:enabled="true"
        android:icon="@drawable/ic_fridge_icon"
        android:title="@string/bottom_nav_my_network"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_shopping"
        android:enabled="true"
        android:icon="@drawable/ic_shopping_icon"
        android:title="@string/bottom_nav_shopping"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_recipes"
        android:enabled="true"
        android:icon="@drawable/ic_recipes_icon"
        android:title="@string/bottom_nav_recipes"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_account"
        android:enabled="true"
        android:icon="@drawable/ic_account_icon"
        android:title="@string/bottom_nav_account"
        app:showAsAction="ifRoom" />
</menu>